--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,15 @@
 *.so
 *.dylib
 
+#VScode
+.vscode/
+
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.tmp
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
