--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,6 @@
 db:
-  host:  "localhost"
-  user:  "user"
-  database: "postgres"
-  ssl_mode : "false"
+  file:  "session.db"
+  filemod:  0600
 mqqt:
   protocol: "tcp"
   ip:       "172.17.0.2"
