--- a/config.yaml
+++ b/config.yaml
@@ -3,5 +3,6 @@ db:
   filemod:  0600
 mqqt:
   protocol: "tcp"
-  ip:       "172.17.0.2"
+  ip:       "172.19.0.2"
   port:     1883
+  multiple: false
